--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "start": "node dist/server.js",
     "seed": "node prisma/seed.js",
     "postinstall": "prisma generate",
+    "vercel-build": "prisma generate && prisma migrate deploy && npm run build",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
