Add Vercel Config

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "backend",
+  "name": "licorice-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend API for Licorice e-commerce platform",
   "license": "ISC",
   "author": "",
   "type": "commonjs",
-  "main": "server.js",
+  "main": "dist/server.js",
   "scripts": {
+    "start": "node dist/server.js",
     "dev": "ts-node-dev src/server.ts",
     "build": "tsc",
+    "build:watch": "tsc --watch",
     "clean": "rm -rf dist",
     "rebuild": "npm run clean && npm run build",
-    "start": "node dist/server.js",
-    "seed": "node prisma/seed.js",
+    "vercel-build": "prisma generate && prisma db push --accept-data-loss && tsc",
     "postinstall": "prisma generate",
-    "vercel-build": "prisma generate && prisma migrate deploy && npm run build",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "seed": "node prisma/seed.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
